--- a/style.css
+++ b/style.css
@@ -8,16 +8,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid black;
 }
 .logo img{
-    height: 40px;
+    height: 35px;
     width: 130px;
     padding-top: 5px;
+    padding-left: 50px;
 }
 .kw-logo .cart{
     display: flex;
     align-items: center;
+    padding-right: 50px;
 }
 .kw-logo .cart img{
     height: 30px;
@@ -29,14 +30,13 @@
 .kw-bg{
    height: 20%;
    width: 100%;
-   border: 3px solid black;
 }
 .kw-bg img{
    height: 350px;
    width: 100%;
 }
 .items .books{
-    padding: 20px 20px 20px 20px;
+    padding: 20px 20px 20px 55px;
     display: flex;
     justify-content: space-around;
 }
@@ -46,6 +46,7 @@
 }
 .items .heading1,.heading2,.heading3{
     font-size: 1.5rem;
+    font-weight: bold;
     padding: 20px 20px 20px 60px;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -66,4 +67,50 @@
 .items .handmade-items img{
     height: 200px;
     width: 200px;
+}
+.items button{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 20px;
+    width: 40px;
+    font-size: 10px;
+    color: white;
+    background-color:#6196FF;
+    border-radius: 3px;
+}
+.shopping{
+    display: flex;
+    justify-content: space-between;
+}
+.items button .i{
+    height: 10px;
+    width: 10px;
+}
+.item-name{
+    font-size: 15px;
+    font-weight: 800;
+}
+.item-author{
+    font-size: 12px;
+    font-weight: 300;
+    color: #979796;
+}
+.brought-to-you-by{
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    color: white;
+}
+.brought-to-you-by p img{
+    height:30px;
+    width: 30px;
+    border-radius: 100%;
+}
+.brought-to-you-by .name{
+    font-weight: 900;
+    font-size: 20px;
+}
+.brought-to-you-by p{
+    font-size: 12px;
 }
