--- a/style.css
+++ b/style.css
@@ -28,11 +28,16 @@
     padding: 0px 5px 0px 0px;
 }
 .kw-bg{
-   height: 20%;
+   height: 300px;
+   color: white;
+   background-image: url('assets/kw-background.png');
+   background-size:cover;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-end;
 }
-.kw-bg img{
-   height: 350px;
-   width: 100%;
+.kw-bg h1 ,h2{
+    margin: 10px 20px 5px 20px;
 }
 .items .books{
     padding: 20px 20px 20px 55px;
@@ -119,6 +124,18 @@
         height: 30px;
         width: 110px;
         padding: 0px;
+    }
+    .kw-bg{
+        height: 170px;
+        background-image: url('assets/kw-background.png');
+        background-size:cover;
+    }
+    .kw-bg h1 , h2{
+        font-size: 15px;
+        margin: 5px;
+    }
+    h2{
+        margin-bottom: 10px;
     }
     .kw-logo .cart{
         padding-right: 0px;
